# myria

./: LICENSE  README.md
.github/workflows/: ci.yml
os/: .gitignore  CMakeLists.txt  Makefile  toolchain-x86_64.cmake
os/boot/: limine.cfg
os/kernel/: CMakeLists.txt  kmain.c  minimal_test.c  test_empty.c  user_init.c  user_payload.S
os/kernel/arch/x86_64/: context.S  context_switch.S  gdt.c  gdt_flush.S  gdt_idt.c  idt_minimal.c  lapic.c  linker.ld  msr.c  paging.c  portio.c  start.S  syscall_entry.S  timer.S
os/kernel/include/myria/: kapi.h  syscalls.h  types.h
os/kernel/mm/: paging.c  pmm.c  pmm_minimal.c  pmm_simple.c  pmm_test.c  user_as.c  user_mapping.c  vmm.c
os/kernel/sched/: thread.c  thread_minimal.c  timer.c
os/kernel/syscall/: syscalls.c
os/kernel/util/: klog.c  serial.c
os/user/: CMakeLists.txt
